2022-10-04  G. Branden Robinson <g.branden.robinson@gmail.com>

	[troff]: Fix Savannah #63151.

	* src/roff/troff/input.cpp (read_draw_node): Throw "delim"
	warning diagnostic when a drawing escape sequence ends the line
	without a closing delimiter.

	Fixes <https://savannah.gnu.org/bugs/?63151>.

2022-10-03  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/fallbacks.tmac: Define fallbacks for characters in ISO
	Latin-{2,5,9} but not in Latin-1.

	Fixes <https://bugs.debian.org/782903>.  Thanks to Rafal Peitrak
	for the report.

2022-10-03  G. Branden Robinson <g.branden.robinson@gmail.com>

	[troff]: Fix Savannah #63149.

	* src/roff/troff/reg.cpp (alter_format): Throw comprehensible
	diagnostic when input delete character encountered in register
	format.

	Fixes <https://savannah.gnu.org/bugs/?63149>.

2022-10-03  G. Branden Robinson <g.branden.robinson@gmail.com>

	[troff]: Describe an input delete character comprehensibly.

	* src/roff/troff/input.cpp (token::description): The delete
	character (ISO 127 decimal, EBCDIC 7) is a valid `TOKEN_CHAR`
	but is not printable.  Don't attempt to output it literally in
	diagnostics; describe it in a phrase instead.

2022-10-03  G. Branden Robinson <g.branden.robinson@gmail.com>

	[troff]: Apply consistent terminology.

	* src/roff/troff/input.cpp: Rename functions to better align
	with our documentation, and decouple their names from an
	assumption of diagnostic severity.  Also give them imperative
	names since they are called for their side effects, not their
	return values.
	- empty_name_warning -> diagnose_missing_identifier
	- non_empty_name_warning -> diagnose_invalid_identifier
	(diagnose_missing_identifier): Refer to absent operand as
	"identifier", not "name", in diagnostic messages since the
	latter (strictly) refers to the request/macro/string/diversion
	name space, and this function is also used to gather register
	identifiers.

2022-10-02  G. Branden Robinson <g.branden.robinson@gmail.com>
